# stellegent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.bash  run.cmd
backend/: entrypoint.sh  pyproject.toml
backend/scripts/: bench_latency.py  eval_rouge.py  eval_wer.py  seed_admin.py
backend/stellegent/: __init__.py  cli.py  config.py  deps.py  evaluation.py  main.py  pipeline.py  processing_queue.py
backend/stellegent/api/v1/: __init__.py  admin.py  audit.py  auth.py  capture.py  courses.py  lectures.py
backend/stellegent/capture/: __init__.py  camera.py  guidance.py  hub.py  live_ui.py
backend/stellegent/core/: email.py  mfa.py  ratelimit.py  retention.py  security.py
backend/stellegent/db/: __init__.py  migrate.py  store.py
backend/stellegent/db/migrations/: 001_init.sql  002_auth.sql  002_auth_security.sql  003_account_management.sql  003_email_verification.sql  004_account_disable.sql  004_course_visibility.sql  005_lecture_title.sql  006_raw_image.sql  007_processing_tasks.sql  008_private_course_lectures.sql  (+3 more)
backend/stellegent/export/: __init__.py  exporter.py
backend/stellegent/nlp/: __init__.py  correct.py  ollama_client.py  summarize.py
backend/stellegent/ocr/: __init__.py  base.py  gemini.py  paddle.py
backend/stellegent/preprocess/: pipeline.py
backend/stellegent/schemas/: __init__.py
backend/tests/: test_auth_security.py  test_db.py  test_evaluation.py  test_export.py  test_guidance.py  test_lecture_evaluation_api.py  test_ocr_gemini_cascade.py  test_ollama_client.py
(+86 files in other folders)
